--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
                         <h2>Une entreprise <br><span>EXPERTE</span></h2>
                     </div>
                 </div>
-                <div class="bg-secondary p-5">
+                <div class="bg-main p-5">
                     <div class="container">
-                        <div class="row">
+                        <div class="row" style="position: relative;">
                             <div>
-                                <p class="w-50">Lorem ipsum dolor sit amet consectetur. Urna sem pellentesque ut arcu
+                                <p class=" w-50">Lorem ipsum dolor sit amet consectetur. Urna sem pellentesque ut arcu
                                     bibendum enim. A
                                     dignissim consectetur tristique vulputate maecenas quam proin orci euismod.
                                     Pellentesque
-                                    in habitant mattis nibh donec. Nulla lorem suspendisse diam sapien tristique
+                                    in habitant mattis nibh donec. Nulla lorem suspendisse diam <span><ins>sapien
+                                            tristique</ins></span>
                                     interdum
                                     pretium est. Aenean libero quis turpis cum nulla magna hendrerit vestibulum. Arcu
                                     nibh
@@ -66,47 +67,221 @@
                                     Eu arcu justo pharetra porta aenean suspendisse nunc eget nibh. Aliquet commodo
                                     egestas
                                     non tristique condimentum tortor. </p>
+
+                            </div>
+                            <div>
+                                <img src="asset/image/Entreprise_experte.jpg" height="500px"
+                                    class="position-absolute img-experte">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div>
-                <img src="asset/image/Entreprise_experte.jpg" height="500px"
-                    class="position-absolute top-50 end-0 translate-middle">
             </div>
         </section>
-        <section class="pt-5" id="professionnels">
+        <section class="pt-5 pb-5" id="professionnels">
             <div class="pt-5 text-center">
                 <h2>Des services <span>PROFESSIONNELS</span></h2>
-                <div class="container gap-0">
-                    <div class="row">
-                        <div class="col-4">
-                            <img src="asset/image/Services professionnels/Image_1.jpg" height="280px">
+                <div class="container pt-5">
+                    <div class="row g-0 bg-prof">
+                        <div class="col">
+                            <img src="asset/image/Services professionnels/Image_1.jpg" class="img-fluid">
                         </div>
-                        <div class="col-4">
-                            <img src="asset/image/Services professionnels/Image_1.jpg" height="280px">
+                        <div class="col d-flex flex-column justify-content-evenly">
+                            <i class="fa-solid fa-code"></i>
+                            <h5>Lorem ipsum dolor</h5>
+                            <p class="pe-5 ps-5">Lorem ipsum dolor sit amet consectetur. Consectetur morbi semper quam
+                                risus
+                                tellus
+                                tristique vestibulum felis dolor.</p>
                         </div>
-                        <div class="col-4">
-                            <img src="asset/image/Services professionnels/Image_1.jpg" height="280px">
+                        <div class="col">
+                            <img src="asset/image/Services professionnels/Image_3.jpg" class="img-fluid">
                         </div>
                         <div class="w-100"></div>
-                        <div class="col-4">
-                            <img src="asset/image/Services professionnels/Image_1.jpg" height="280px">
+                        <div class="col d-flex flex-column justify-content-evenly">
+                            <div>
+                                <i class="fa-solid fa-trowel"></i>
+                                <i class="fa-solid fa-paint-roller"></i>
+                            </div>
+                            <h5>Lorem ipsum dolor</h5>
+                            <p class="pe-5 ps-5">Lorem ipsum dolor sit amet consectetur. Consectetur morbi semper quam
+                                risus tellus
+                                tristique vestibulum felis dolor.</p>
                         </div>
-                        <div class="col-4">
-                            <img src="asset/image/Services professionnels/Image_1.jpg" height="280px">
+                        <div class="col">
+                            <img src="asset/image/Services professionnels/Image_2.jpg" class="img-fluid">
                         </div>
-                        <div class="col-4">
-                            <img src="asset/image/Services professionnels/Image_1.jpg" height="280px">
+                        <div class="col d-flex flex-column justify-content-evenly">
+                            <i class="fa-solid fa-code"></i>
+                            <h5>Lorem ipsum dolor</h5>
+                            <p class="pe-5 ps-5">Lorem ipsum dolor sit amet consectetur. Consectetur morbi semper quam
+                                risus tellus
+                                tristique vestibulum felis dolor.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
+        <section class="pb-5" id="surmesure">
+            <div class="pt-5">
+                <div class="container">
+                    <div class="row">
+                        <h2>Des réalisations <br><span>SUR MESURE</span></h2>
+                    </div>
+                </div>
 
+                <div class="container pt-5">
+                    <div class="row g-0">
+                        <div class="col-4 p-2">
+                            <img src="asset/image/Réalisation sur mesure/Image_1.jpg" class="img-fluid h-100">
+                        </div>
+                        <div class="col-4 p-2">
+                            <img src="asset/image/Réalisation sur mesure/Image_2.jpg" class="img-fluid h-100">
+                        </div>
+                        <div class="col-4 p-2">
+                            <img src="asset/image/Réalisation sur mesure/Image_3.jpg" class="img-fluid h-100">
+                        </div>
+                        <div class="col-4 p-2">
+                            <img src="asset/image/Réalisation sur mesure/Image_4.jpg" class="img-fluid h-100">
+                        </div>
+                        <div class="col-4 p-2">
+                            <img src="asset/image/Réalisation sur mesure/Image_5.jpg" class="img-fluid h-100">
+                        </div>
+                        <div class="col-4 p-2">
+                            <img src="asset/image/Réalisation sur mesure/Image_6.jpg" class="img-fluid h-100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner img-carousel overflow-hidden">
+                    <div class="carousel-item active left">
+                        <img src="asset/image/Slider/Image_slider_1.jpg" class="d-block w-100" alt=" ...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="asset/image/Slider/Image_slider_2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="asset/image/Slider/Image_slider_3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+
+                </button>
+            </div>
+        </section>
+        <section id="contacter">
+            <div class="pt-5 ">
+                <h2 class="text-center">Nous <span>CONTACTER</span></h2>
+                <div class="contact-form-wrapper d-flex justify-content-center pt-5">
+                    <div class="bg-contacter"></div>
+                    <form action="#" class="contact-form border border-dark p-5 bg-white" style="width:800px">
+                        <div>
+                            <input type="text" class="form-control border-dark rounded-0 mb-3 form-input" id="name"
+                                placeholder="Nom*" required>
+                        </div>
+                        <div>
+                            <input type="email" class="form-control rounded border-dark rounded-0 mb-3 form-input"
+                                placeholder="Adresse mail*" required>
+                        </div>
+                        <div>
+                            <input type="phone" class="form-control rounded border-dark rounded-0 mb-3 form-input"
+                                placeholder="Téléphone*" required>
+                        </div>
+                        <div>
+                            <input type="object" class="form-control rounded border-dark rounded-0 mb-3 form-input"
+                                placeholder="Objet*" required>
+                        </div>
+                        <div>
+                            <textarea id="message"
+                                class="form-control rounded border-dark rounded-0 mb-3 form-text-area" rows="5"
+                                cols="30" placeholder="Message*" required></textarea>
+                        </div>
+                        <div class="d-flex justify-content-center pt-1">
+                            <div class="d-grid gap-2 col-6 mx-auto">
+                                <button class="btn btn-contacter text-white" type="button">Envoyer</button>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center pt-5">
+                            <div class="d-flex align-items-center pe-5">
+                                <div class="pe-3">
+                                    <i class="fa-solid fa-phone-volume"></i>
+                                </div>
+                                <div class="d-flex flex-column">
+                                    <h5 class="p-0 m-0">TELEPHONE</h5>
+                                    <p class="p-0 m-0">06 XX XX XX XX</p>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <div class="pe-3">
+                                    <i class="fa-solid fa-envelope-open-text"></i>
+                                </div>
+                                <div>
+                                    <h5 class="p-0 m-0">EMAIL</h5>
+                                    <p class="p-0 m-0">jules@drosalys.fr</p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="pt-5">
+        <nav class="navbar navbar-expand-lg bg-footer">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link text-white" href="#">Mentions légales</a>
+                        <a class="nav-link text-white" href="#">© Jules Pauly</a>
+                        <a class="nav-link text-white" href="#">Politique de confidentialité</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+
+                </div>
+                <div class="col-3">
+                    <h5>Plan du site</h5>
+                    <a href="#" class="list-group-item">Accueil</a>
+                    <a href="#" class="list-group-item">L'entreprise</a>
+                    <a href="#" class="list-group-item">Services</a>
+                    <a href="#" class="list-group-item">Réalisations</a>
+                    <a href="#" class="list-group-item">Contact</a>
+                </div>
+                <div class="col-3 d-flex justify-content-center align-items-center">
+                    <img src="asset/image/Logo.png" height="100px" class="mx-auto">
+                </div>
+                <div class="col-3">
+                    <h5>Nos réseaux sociaux</h5>
+                    <div class="d-flex">
+                        <i class="fa-brands fa-instagram p-1"></i>
+                        <a href="#" class="list-group-item">Instagram</a>
+                    </div>
+                    <div class="d-flex">
+                        <i class="fa-brands fa-facebook p-1"></i>
+                        <a href="#" class="list-group-item">Facebook</a>
+                    </div>
+                </div>
+                <div class="col">
+
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
