--- a/index.html
+++ b/index.html
@@ -10,33 +10,43 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-            <div class="collapse navbar-collapse col-3 justify-content-center">
-                <img src="asset/image/Logo.png" height="50px" class="">
-            </div>
-            <div class="collapse navbar-collapse col-6 justify-content-center">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ACCUEIL</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">L'ENTREPRISE</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">SERVICES</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">RÉALISATIONS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="collapse navbar-collapse col-3 justify-content-center">
-                <i class="fa-brands fa-instagram p-1"></i>
-                <i class="fa-brands fa-facebook p-1"></i>
+    <header id="header">
+        <nav class="navbar navbar-expand-md navbar-light shadow-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+
+                </a>
+                <div class="collapse navbar-collapse col-3 justify-content-center">
+                    <img src="asset/image/Logo.png" height="50px" class="">
+                </div>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse col-6 justify-content-center" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#header">ACCUEIL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#experte">L'ENTREPRISE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#professionnels">SERVICES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#surmesure">RÉALISATIONS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contacter">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="collapse navbar-collapse col-3 justify-content-center">
+                    <i class="fa-brands fa-instagram p-1"></i>
+                    <i class="fa-brands fa-facebook p-1"></i>
+                </div>
             </div>
         </nav>
     </header>
@@ -50,7 +60,7 @@
                 </div>
                 <div class="bg-main p-5">
                     <div class="container">
-                        <div class="row" style="position: relative;">
+                        <div class="row position-relative">
                             <div>
                                 <p class=" w-50">Lorem ipsum dolor sit amet consectetur. Urna sem pellentesque ut arcu
                                     bibendum enim. A
@@ -70,8 +80,7 @@
 
                             </div>
                             <div>
-                                <img src="asset/image/Entreprise_experte.jpg" height="500px"
-                                    class="position-absolute img-experte">
+                                <img src="asset/image/Entreprise_experte.jpg" class="position-absolute img-experte">
                             </div>
                         </div>
                     </div>
@@ -83,23 +92,25 @@
             <div class="pt-5 text-center">
                 <h2>Des services <span>PROFESSIONNELS</span></h2>
                 <div class="container pt-5">
-                    <div class="row g-0 bg-prof">
-                        <div class="col">
+                    <div class="row g-0 bg-prof justify-content-center">
+                        <div class="col-xl col-8 order-xl-0 order-0 p-xl-0">
                             <img src="asset/image/Services professionnels/Image_1.jpg" class="img-fluid">
                         </div>
-                        <div class="col d-flex flex-column justify-content-evenly">
-                            <i class="fa-solid fa-code"></i>
+                        <div
+                            class="col-xl col-8 d-flex flex-column justify-content-evenly order-xl-0 order-5 p-xl-0 p-3">
+                            <i class="fa-solid fa-clone"></i>
                             <h5>Lorem ipsum dolor</h5>
                             <p class="pe-5 ps-5">Lorem ipsum dolor sit amet consectetur. Consectetur morbi semper quam
                                 risus
                                 tellus
                                 tristique vestibulum felis dolor.</p>
                         </div>
-                        <div class="col">
+                        <div class="col-xl col-8 order-xl-0 order-1 p-xl-0">
                             <img src="asset/image/Services professionnels/Image_3.jpg" class="img-fluid">
                         </div>
-                        <div class="w-100"></div>
-                        <div class="col d-flex flex-column justify-content-evenly">
+                        <div class="col-12-xl"></div>
+                        <div
+                            class="col-xl col-8 d-flex flex-column justify-content-evenly order-xl-0 order-0 p-xl-0 p-3">
                             <div>
                                 <i class="fa-solid fa-trowel"></i>
                                 <i class="fa-solid fa-paint-roller"></i>
@@ -109,11 +120,27 @@
                                 risus tellus
                                 tristique vestibulum felis dolor.</p>
                         </div>
-                        <div class="col">
+                        <div class="col-xl col-8 order-xl-0 order-5 p-xl-0">
                             <img src="asset/image/Services professionnels/Image_2.jpg" class="img-fluid">
                         </div>
-                        <div class="col d-flex flex-column justify-content-evenly">
-                            <i class="fa-solid fa-code"></i>
+                        <div
+                            class="col-xl col-8 d-flex flex-column justify-content-evenly align-items-center order-xl-0 order-5 p-xl-0 p-3">
+                            <svg width="36" height="31" viewBox="0 0 36 31" fill="none"
+                                xmlns="http://www.w3.org/2000/svg%22%3E">
+                                <path
+                                    d="M24.0489 1C16.3664 5.96353 8.68252 10.9257 1 15.8893C1.14857 17.9461 1.29853 20.0042 1.44709 22.0611C8.98104 17.0606 16.5164 12.0602 24.0503 7.0598L24.0476 1H24.0489Z"
+                                    stroke="#889A72" stroke-width="0.8" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path
+                                    d="M34.8696 8.94154V8.93891C33.4117 9.88102 31.9524 10.8231 30.4945 11.7652C28.3465 10.1972 26.1985 8.62926 24.0491 7.06128C16.518 12.0762 8.98678 17.0911 1.45422 22.106C5.0518 24.7334 8.64938 27.3608 12.247 29.9881C12.2539 29.9842 12.2595 29.9789 12.2664 29.9749C12.2664 29.9828 12.2664 29.9921 12.2678 30C12.2761 29.9947 12.2844 29.9881 12.2942 29.9828C12.1456 27.926 11.9956 25.8705 11.8471 23.8137C19.5213 18.8567 27.1954 13.8985 34.8696 8.94154Z"
+                                    stroke="#889A72" stroke-width="0.8" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path
+                                    d="M34.8972 14.9839L34.8944 8.92407L34.8681 8.9412C34.8681 10.948 34.8695 12.9547 34.8708 14.9615C34.8736 14.9628 34.8764 14.9654 34.8778 14.9667C34.875 14.9681 34.8722 14.9694 34.8708 14.972C34.8708 14.9812 34.8708 14.9891 34.8708 14.9984C27.3452 19.9935 19.8182 24.9873 12.2926 29.9825C12.2926 29.9825 12.2926 29.9838 12.2926 29.9851C19.8266 24.9847 27.3619 19.9843 34.8958 14.9839H34.8972Z"
+                                    stroke="#889A72" stroke-width="0.8" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+
                             <h5>Lorem ipsum dolor</h5>
                             <p class="pe-5 ps-5">Lorem ipsum dolor sit amet consectetur. Consectetur morbi semper quam
                                 risus tellus
@@ -239,7 +266,7 @@
         </section>
     </main>
     <footer class="pt-5">
-        <nav class="navbar navbar-expand-lg bg-footer">
+        <nav class="navbar navbar-expand bg-footer">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
@@ -250,31 +277,35 @@
                 </div>
             </div>
         </nav>
-        <div class="container">
+        <div class="container pb-3">
             <div class="row">
                 <div class="col">
 
                 </div>
-                <div class="col-3">
+                <div class="col-3 pt-3">
                     <h5>Plan du site</h5>
-                    <a href="#" class="list-group-item">Accueil</a>
-                    <a href="#" class="list-group-item">L'entreprise</a>
-                    <a href="#" class="list-group-item">Services</a>
-                    <a href="#" class="list-group-item">Réalisations</a>
-                    <a href="#" class="list-group-item">Contact</a>
+                    <a href="#header" class="list-group-item">Accueil</a>
+                    <a href="#experte" class="list-group-item">L'entreprise</a>
+                    <a href="#professionnels" class="list-group-item">Services</a>
+                    <a href="#surmesure" class="list-group-item">Réalisations</a>
+                    <a href="#contacter" class="list-group-item">Contact</a>
                 </div>
                 <div class="col-3 d-flex justify-content-center align-items-center">
                     <img src="asset/image/Logo.png" height="100px" class="mx-auto">
                 </div>
-                <div class="col-3">
-                    <h5>Nos réseaux sociaux</h5>
-                    <div class="d-flex">
-                        <i class="fa-brands fa-instagram p-1"></i>
-                        <a href="#" class="list-group-item">Instagram</a>
-                    </div>
-                    <div class="d-flex">
-                        <i class="fa-brands fa-facebook p-1"></i>
-                        <a href="#" class="list-group-item">Facebook</a>
+                <div class="col-3 pt-3 align">
+                    <div class="d-flex justify-content-end">
+                        <div>
+                            <h5>Nos réseaux sociaux</h5>
+                            <div class="d-flex">
+                                <i class="fa-brands fa-instagram p-1"></i>
+                                <a href="#" class="list-group-item">Instagram</a>
+                            </div>
+                            <div class="d-flex">
+                                <i class="fa-brands fa-facebook p-1"></i>
+                                <a href="#" class="list-group-item">Facebook</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col">
