responsive header fini

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
     <header id="header">
         <nav class="navbar navbar-expand-md navbar-light shadow-sm">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-
-                </a>
-                <div class="collapse navbar-collapse col-3 justify-content-center">
+                <div class="collapse navbar-collapse col-3 justify-content-center logo">
                     <img src="asset/image/Logo.png" height="50px" class="">
                 </div>
+
+                <a class="hide">
+                    <div class="navbar-collapse col-3 justify-content-center logo">
+                        <img src="asset/image/Logo.png" height="50px" class="">
+                    </div>
+                </a>
+
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -41,6 +45,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#contacter">CONTACT</a>
                         </li>
+                        <li class="nacv-item hide">
+                            <i class="fa-brands fa-instagram p-1"></i>
+                            <i class="fa-brands fa-facebook p-1"></i>
+                        </li>
+
                     </ul>
                 </div>
                 <div class="collapse navbar-collapse col-3 justify-content-center">
